--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
                 <div class="row">
                     <div class="col-12">
                         <h2 style="color: rgba(249, 250, 251, 1); font-weight: 600; font-size: 30px;">Curious about me? Here you have it:</h2>
-                        <p>I'm a passionate, self-proclaimed designer who specializes in full stack development (React.js & Node.js). I am very enthusiastic about bringing the technical and visual aspects of digital products to life. User experience, pixel perfect design, and writing clear, readable, highly performant code matters to me. <br><br>
+                        <p>I'm a passionate, <a class="a" href="#">self-proclaimed designer</a> who specializes in full stack development (React.js & Node.js). I am very enthusiastic about bringing the technical and visual aspects of digital products to life. User experience, pixel perfect design, and writing clear, readable, highly performant code matters to me. <br><br>
                             I began my journey as a web developer in 2015, and since then, I've continued to grow and evolve as a developer, taking on new challenges and learning the latest technologies along the way. Now, in my early thirties, 7 years after starting my web development journey, I'm building cutting-edge web applications using modern technologies such as Next.js, TypeScript, Nestjs, Tailwindcss, Supabase and much more.<br><br>
                             I am very much a progressive thinker and enjoy working on products end to end, from ideation all the way to development.<br><br>
-                            When I'm not in full-on developer mode, you can find me hovering around on twitter or on indie hacker, witnessing the journey of early startups or enjoying some free time. You can follow me on Twitter where I share tech-related bites and build in public, or you can follow me on GitHub.<br><br>
+                            When I'm not in full-on developer mode, you can find me hovering around on twitter or on indie hacker, witnessing the journey of early startups or enjoying some free time. You can follow me on <a class="a" href="#">Twitter</a> where I share tech-related bites and build in public, or you can follow me on <a class="a" href="#">GitHub</a>.<br><br>
                             Finally, some quick bits about me.
                         </p>
                     
