--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         </div>
     </div>
 
-    <div class="container" style="margin-top: 50px; padding-top: 50px;">
+    <div class="container mt-5 pt-5">
         <div class="row">
             <div class="col-12 d-flex justify-content-center">
                 <div  class="headings text-center">
@@ -108,7 +108,7 @@
             </div>
         </div>
         
-        <div class="row" style="height: 694px; margin-top: 40px;">
+        <div class="row">
             <div class="col-6"> <!--მარცხენა მხარე მთლიანად-->
                 <div class="row">
                     <div class="col-12 justify-content-start">
