--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </div>
         </div>
         
-        <div class="row">
+        <div class="row mt-5">
             <div class="col-6"> <!--მარცხენა მხარე მთლიანად-->
                 <div class="row">
                     <div class="col-12 justify-content-start">
